# Simple_gtest_demo

./: CMakeLists.txt  README.md  main.cpp
